# termix

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: simple.rs  views.rs
src/: color.rs  cursor.rs  error.rs  event.rs  input.rs  key.rs  lib.rs  model.rs  output.rs  raw.rs  renderer.rs
